[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/menus/main_menu/main_menu.gd" type="Script" id=1]

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_play" type="Button" parent="."]
margin_left = 936.764
margin_top = 178.022
margin_right = 1127.76
margin_bottom = 253.022
text = "play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_scan_songs" type="Button" parent="."]
margin_left = 940.447
margin_top = 336.4
margin_right = 1131.45
margin_bottom = 411.4
text = "scan songs"

[node name="btn_exit" type="Button" parent="."]
margin_left = 939.219
margin_top = 520.561
margin_right = 1130.22
margin_bottom = 595.561
text = "exit"

[node name="Label" type="Label" parent="."]
margin_left = 141.19
margin_top = 94.5358
margin_right = 267.19
margin_bottom = 183.536
text = "Songs scanned: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 379.371
margin_top = 93.308
margin_right = 505.371
margin_bottom = 182.308
text = "Arrangements scanned: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 131.368
margin_top = 176.794
margin_right = 321.368
margin_bottom = 238.794
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton2" type="OptionButton" parent="."]
visible = false
margin_left = 131.368
margin_top = 340.083
margin_right = 321.368
margin_bottom = 402.083
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 64.0
margin_top = 359.0
margin_right = 288.0
margin_bottom = 439.0
text = "add overdrive"

[node name="Button2" type="Button" parent="."]
margin_left = 87.0
margin_top = 494.0
margin_right = 317.0
margin_bottom = 568.0
text = "remove overdrive"
[connection signal="pressed" from="btn_play" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="btn_scan_songs" to="." method="_on_btn_scan_songs_pressed"]
[connection signal="pressed" from="btn_exit" to="." method="_on_btn_exit_pressed"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="item_selected" from="OptionButton2" to="." method="_on_OptionButton2_item_selected"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
